# FULL-STACK

.agent/skills/gemini-skills/skills/gemini-omni-flash-api/scripts/: upload_file.py
.agent/skills/skills-garden/design-doc-skills/: .gitignore
.agent/skills/skills-garden/ux-design-skills/: listening-room.md  y2k-dreamcore.md
AI characters/.agent/skills/gemini-skills/: README.md
AI characters/.agent/skills/skills-garden/: README.md
AI characters/.agent/skills/skills-garden/design-doc-skills/: README.md
AI characters/.agent/skills/skills-garden/eng-skills/: gemini-api.md  test-driven-dev.md
AI characters/.agent/skills/skills-garden/ux-design-skills/: cloud-pup.md
AI characters/codingjam-avatar-studio/: .gitignore  BRIEF.md  README.md  product.md  ui.md
AI characters/codingjam-avatar-studio/backend/: main.py
AI characters/codingjam-avatar-studio/frontend/: index.html
AI characters/codingjam-avatar-studio/reference/moodjar-example/: README.md
AI characters/codingjam-avatar-studio/reference/moodjar-example/backend/: .env.example  main.py  prompts.py  pyproject.toml  requirements.txt
AI characters/codingjam-avatar-studio/reference/moodjar-example/frontend/: app.js  index.html
codingjam-avatar-studio/: engineering.md  render.yaml  ui.md
codingjam-avatar-studio/backend/: main.py  pyproject.toml  requirements.txt
codingjam-avatar-studio/backend/tests/: test_main.py
codingjam-avatar-studio/frontend/: app.js  index.html  manifest.json  style.css  sw.js
codingjam-avatar-studio/reference/moodjar-example/frontend/: jar.js  style.css
(+7 files in other folders)
