[project]
name = "windowsill-backend"
version = "0.1.0"
description = "AI-powered comfort response generator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "google-genai>=1.14.0",
    "python-dotenv>=1.0.0",
    "pyopenssl>=24.0.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true
